# era-compiler-common

./: .gitignore  Cargo.toml  README.md  release-plz.toml
.github/workflows/: ci.yaml  dependency_check.yaml  release.yaml
common/src/: target.rs
era-compiler-common/: CHANGELOG.md  Cargo.toml
era-compiler-common/src/: address.rs  base.rs  bit_length.rs  byte_length.rs  cbor.rs  code_segment.rs  contract_name.rs  evm_version.rs  exit_code.rs  extension.rs  lib.rs  libraries.rs  metadata_hash_type.rs  object_format.rs  target.rs  utils.rs
era-compiler-common/src/eravm/: mod.rs
era-compiler-common/src/hash/: ipfs.rs  keccak256.rs  mod.rs  type.rs
era-compiler-common/src/metadata_hash_type/: eravm.rs  evm.rs  mod.rs
era-compiler-downloader/: CHANGELOG.md  Cargo.toml
era-compiler-downloader/src/: lib.rs
era-compiler-downloader/src/config/: compiler_list.rs  mod.rs
era-compiler-downloader/src/config/binary/: protocol.rs
era-compiler-downloader/src/config/executable/: mod.rs  protocol.rs
solc-downloader/: Cargo.toml
solc-downloader/src/: lib.rs
solc-downloader/src/config/: mod.rs
src/: address.rs  bit_length.rs  byte_length.rs  extension.rs  lib.rs  target.rs  utils.rs
src/eravm/: address.rs
src/hash/: ipfs.rs  keccak256.rs  mod.rs  type.rs
