[package]
name = "era-compiler-common"
version = "1.5.0"
authors = [
    "Oleksandr Zarudnyi <a.zarudnyy@matterlabs.dev>",
]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Shared constants of the ZKsync compilers"

[lib]
doctest = false

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = [ "arbitrary_precision", "unbounded_depth" ] }
serde_stacker = "0.1"

sha3 = "0.10"
hex = "0.4"
ipfs-hasher = "0.13"
base58 = "0.2"
