[package]
name = "era-compiler-common"
description = "Shared constants of the ZKsync compilers"
authors.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true

[lib]
doctest = false

[dependencies]
anyhow = "=1.0.89"
serde = { version = "=1.0.210", features = ["derive"] }
serde_json = { version = "=1.0.128", features = [ "arbitrary_precision", "unbounded_depth" ] }
serde_stacker = "=0.1.11"
serde_arrays = "=0.1.0"

sha3 = "=0.10.8"
hex = "=0.4.3"
ipfs-hasher = "=0.13.0"
base58 = "=0.2.0"
