[package]
name = "era-compiler-common"
authors.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true
description = "Shared constants of the ZKsync compilers"

[lib]
doctest = false

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = [ "arbitrary_precision", "unbounded_depth" ] }
serde_stacker = "0.1"
serde_arrays = "0.2"

sha3 = "0.10"
hex = "0.4"
ipfs-hasher = "0.13"
base58 = "0.2"
semver = "1.0"
