[package]
name = "era-compiler-downloader"
authors.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
anyhow = "=1.0.89"
colored = "=2.1.0"
serde = { version = "=1.0.210", "features" = [ "derive" ] }
serde_json = { version = "=1.0.128", features = [ "arbitrary_precision" ] }

reqwest = { version = "=0.11.27", features = ["blocking", "json"] }

# Musl requires explicit openssl dependency
[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "=0.10.68", features = ["vendored"] }
