[package]
name = "era-compiler-downloader"
authors.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true
description = "Downloader for dependencies of the ZKsync compilers"

[dependencies]
anyhow = "1.0"
colored = "3.0"
serde = { version = "1.0", "features" = [ "derive" ] }
serde_json = { version = "1.0", features = [ "arbitrary_precision" ] }

reqwest = { version = "0.12", features = ["blocking", "json"] }

# MUSL requires an explicit OpenSSL dependency
[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
